fix: horizontal alignment with gap

--- a/src/clr-core/styles/layout/_grid.scss
+++ b/src/clr-core/styles/layout/_grid.scss
@@ -4,7 +4,7 @@
 
 cds-layout {
   width: 100%;
-  --gap: 0;
+  --gap: 0px;
   --x-align: flex-start;
   --y-align: flex-start;
 
@@ -77,6 +77,7 @@ cds-layout[type='horizontal'] {
   justify-content: var(--x-align);
   margin-left: calc(-1 * var(--gap));
   margin-top: calc(-1 * var(--gap));
+  width: calc(100% + var(--gap));
 
   & > * {
     margin-left: var(--gap);
